# FlyOff

./: 0.bootstrap.js  1.bootstrap.js  Cargo.toml  README.md  bootstrap.js  index.html
.github/workflows/: rust.yml
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: chromosome.rs  crossover.rs  lib.rs  mutation.rs  selection.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: lib.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: lib.rs
libs/simulation/src/: animal.rs  animal_individual.rs  brain.rs  eye.rs  food.rs  lib.rs  world.rs
libs/simulation/src/world/: Animal.rs  Food.rs  eye.rs
www/: index.html  index.js  package-lock.json  package.json
