[package]
name = "lib-simulaition-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.152", features=["derive"]}
wasm-bindgen = { version = "0.2.83",features=['serde-serialize']}
rand = "0.8.5"
getrandom = {version='0.2.8',features =['js']}
lib-simulation = {path = "../simulation"}
serde-wasm-bindgen = "0.4"
