[package]
name = "lib-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.31.4", features = ["rand-no-std"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
lib-neural-network = { path = "../neural-network" }
[dev-dependencies]
test-case = "2.2.2"
approx = "0.5.1"
rand_chacha = "0.3"
